WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284687
[iOS] AirPods mute API is not enabled
https://bugs.webkit.org/show_bug.cgi?id=284687
Summary
[iOS] AirPods mute API is not enabled
youenn fablet
Reported
2024-12-13 23:32:52 PST
<
rdar://141464735
>
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2024-12-14 09:49:57 PST
Committed
287838@main
(c987eee989bb): <
https://commits.webkit.org/287838@main
> Reviewed commits have been landed. Closing PR #37965 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug