[iOS] AirPods mute API is not enabled rdar://141464735 https://bugs.webkit.org/show_bug.cgi?id=284687

Reviewed by Anne van Kesteren.

Enabling of AirPods mute API was compiled out on iOS due to SC_CONTENT_SHARING_PICKER.
We move it out of the SC_CONTENT_SHARING_PICKER section.

Manually tested.

* Source/WebKit/UIProcess/UserMediaPermissionRequestManagerProxy.cpp:
(WebKit::UserMediaPermissionRequestManagerProxy::syncWithWebCorePrefs const):

Canonical link: https://commits.webkit.org/287838@main